<resources>
    <string name="app_name">Vészjelző Ébresztő</string>
    <string name="bottom_menu_item_alarms">Ébresztők</string>
    <string name="bottom_menu_item_contacts">Segélykérés</string>
    <string name="schedule_alarm">Új ébresztő felvétele</string>
    <string name="alarm_time">Ébresztés ideje</string>
    <string name="alarm_title">Ébresztés neve (opcionális)</string>
    <string name="recurring_alarm">Ismétlődő ébresztő</string>
    <string name="mon">H</string>
    <string name="tue">K</string>
    <string name="wed">Sz</string>
    <string name="thu">Cs</string>
    <string name="fri">P</string>
    <string name="sat">Sz</string>
    <string name="sun">V</string>
    <string name="save_alarm">Mentés</string>
    <string name="my_alarms">Beállított ébresztők</string>
    <string name="add_alarm">Új ébresztő</string>
    <string name="emergency_message">Segélykérő üzenet</string>
    <string name="edit_message_popup_title">Segélykérő üzenet módosítása</string>
    <string name="edit">Módosít</string>
    <string name="cancel">Mégse</string>
    <string name="save">Mentés</string>
    <string name="delete">Törlés</string>
    <string name="my_contacts">Értesítendő személyek</string>
    <string name="add_contact">Új személy hozzáadása</string>
    <string name="once_off">Egyszeri</string>
    <string name="default_alarm_title">Ébresztő</string>
    <string name="ring_ring">Vészjelző Ébresztő</string>
    <string name="dismiss">Kikapcsolás</string>
    <string name="snooze">Szundi</string>
    <string name="cancel_schedule_alarm">Mégse</string>
    <string name="default_emergency_message_text">SEGÍTS! Ez egy automatikusan küldött SMS
        a Vészjelző Ébresztő alkalmazásból, mert nem reagáltam a beállított ébresztőre.
        Kérlek nézz rám, lehet, hogy rosszul vagyok!</string>
    <string name="emergency_timeout">Segélykérés küldése hány perc után</string>
    <string name="minute">perc</string>
    <string name="channel_name">Ébresztő</string>
    <string name="channel_description">Ébresztések jelzése</string>
    <string name="edit_contact_list">Lista módosítása</string>
    <string name="delete_contact_confirmation_title_part">törlése</string>
    <string name="delete_contact_confirmation_message">Törlöd a személyt az értesítendő személyek listájáról?</string>
</resources>
