<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:paddingTop="80dp"
    android:orientation="vertical">

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyTimePicker"
        android:timePickerMode="clock"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/new_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_title"
        app:layout_constraintTop_toBottomOf="@id/time_picker"/>

    <CheckBox
        android:id="@+id/is_new_alarm_recurring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/recurring_alarm"
        app:layout_constraintTop_toBottomOf="@id/new_alarm_name"/>

    <LinearLayout
        android:id="@+id/week_days_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/is_new_alarm_recurring">

        <CheckBox
            android:id="@+id/on_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon" />

        <CheckBox
            android:id="@+id/on_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue" />

        <CheckBox
            android:id="@+id/on_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed" />

        <CheckBox
            android:id="@+id/on_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu" />

        <CheckBox
            android:id="@+id/on_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri" />

        <CheckBox
            android:id="@+id/on_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat" />

        <CheckBox
            android:id="@+id/on_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_schedule_alarm_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/cancel_schedule_alarm" />

        <Button
            android:id="@+id/save_schedule_alarm_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>