<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_createalarm_scheduleAlarmHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_alarm"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fragment_createalarm_timePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_scheduleAlarmHeading">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/alarm_time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TimePicker
                android:id="@+id/fragment_createalarm_timePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <EditText
            android:id="@+id/fragment_createalarm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alarm_title"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_timePickerLayout" />

        <CheckBox
            android:id="@+id/fragment_createalarm_recurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/recurring_alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_title" />

        <LinearLayout
            android:id="@+id/fragment_createalarm_recurring_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring">

            <CheckBox
                android:id="@+id/fragment_createalarm_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_createalarm_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel_schedule_alarm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_scheduleAlarm"
            tools:layout_editor_absoluteX="133dp" />

        <Button
            android:id="@+id/fragment_createalarm_scheduleAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/save_alarm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="133dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>